<resources>
    <string name="app_name">Harmoni</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_sign_up">Sign up to enjoy Harmoni</string>
    <string name="title_sign_in">Sign in Harmoni</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="username">"Username"</string>
    <string name="email">"Email"</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have any account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">"Password (at least 6 characters"</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>